# twitch-emote-unlock

./: .gitignore  README.md  config.example.toml  config.py  pyproject.toml  run.py
scripts/: build-linux  build-win.ps1
