[tool.poetry]
name = "twitch-emote-unlock"
version = "0.1.0"
description = ""
authors = ["Zutatensuppe"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests = "^2.26.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
